{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 32,
  "lineage": "1b370e6e-3a23-4acd-9872-e16f3af4f284",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_service_integration_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/networkSecurityGroups/app_service_integration_NSG",
            "location": "francecentral",
            "name": "app_service_integration_NSG",
            "resource_group_name": "rg-sqlapp-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-OUT-private-endpoints",
                "priority": 109,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.the_group",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_endpoints_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/networkSecurityGroups/private_endpoints_NSG",
            "location": "francecentral",
            "name": "private_endpoints_NSG",
            "resource_group_name": "rg-sqlapp-dev",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Deny-OUT",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.the_group",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_service_integration_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "webapp",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/app_service_integration_subnet",
            "name": "app_service_integration_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-sqlapp-dev",
            "virtual_network_name": "vnet-sqlapp-dev"
          },
          "dependencies": [
            "azurerm_resource_group.the_group",
            "azurerm_virtual_network.the_network",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoints_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/private_endpoints_subnet",
            "name": "private_endpoints_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-sqlapp-dev",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "vnet-sqlapp-dev"
          },
          "dependencies": [
            "azurerm_resource_group.the_group",
            "azurerm_virtual_network.the_network",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "connect_app_service_to_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/app_service_integration_subnet",
            "network_security_group_id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/networkSecurityGroups/app_service_integration_NSG",
            "subnet_id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/app_service_integration_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_service_integration_NSG",
            "azurerm_resource_group.the_group",
            "azurerm_subnet.app_service_integration_subnet",
            "azurerm_virtual_network.the_network",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_endpoints_to_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/private_endpoints_subnet",
            "network_security_group_id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/networkSecurityGroups/private_endpoints_NSG",
            "subnet_id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/private_endpoints_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.private_endpoints_NSG",
            "azurerm_resource_group.the_group",
            "azurerm_subnet.private_endpoints_subnet",
            "azurerm_virtual_network.the_network",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "the_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "168.63.129.16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0355d954-349d-4fa1-b84f-e16830a996a9",
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev",
            "location": "francecentral",
            "name": "vnet-sqlapp-dev",
            "resource_group_name": "rg-sqlapp-dev",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/app_service_integration_subnet",
                "name": "app_service_integration_subnet",
                "security_group": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/networkSecurityGroups/app_service_integration_NSG"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/private_endpoints_subnet",
                "name": "private_endpoints_subnet",
                "security_group": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/networkSecurityGroups/private_endpoints_NSG"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.the_group",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    },
    {
      "module": "module.the_database",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "ktmvka23gsqu5ocp2fudbkmwvb.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/publicIPAddresses/example-pip",
                "subnet_id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/virtualNetworks/vnet-sqlapp-dev/subnets/private_endpoints_subnet"
              }
            ],
            "location": "francecentral",
            "mac_address": "00-22-48-38-DC-3D",
            "name": "example-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-sqlapp-dev",
            "virtual_machine_id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Compute/virtualMachines/vm-sqlapp-dev"
          },
          "dependencies": [
            "azurerm_resource_group.the_group",
            "azurerm_subnet.private_endpoints_subnet",
            "azurerm_virtual_network.the_network",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main",
            "module.the_database.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.the_database",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c3b441a2-e383-46cf-9ac4-4386092309bb/resourceGroups/rg-sqlapp-dev/providers/Microsoft.Network/publicIPAddresses/example-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.211.130.178",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "example-pip",
            "resource_group_name": "rg-sqlapp-dev",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.the_group",
            "module.naming.random_string.first_letter",
            "module.naming.random_string.main"
          ]
        }
      ]
    }
  ]
}